fixed footer items overflowing page, added margin to featured image, various small bug fixes to blocks

--- a/theme/scss/site/footer.scss
+++ b/theme/scss/site/footer.scss
@@ -8,3 +8,8 @@ body, .wp-site-blocks {
 main {
 	flex: 1 0 auto;
 }
+
+footer div .alignwide {
+	position: initial;
+	width: 100%;
+}
