--- a/theme/scss/site/layout.scss
+++ b/theme/scss/site/layout.scss
@@ -53,10 +53,3 @@ body {
 		right: 0 !important;
 	}
 }
-
-@media screen and (min-width: 768px) {
-  .entry-content > * {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-}
